# t

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  t.cabal
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
nix/modules/flake/: app.nix  devshell.nix  haskell.nix  services.nix
src/: Main.hs
src/T/: LLM.hs  Types.hs  View.hs
