cabal-version:      2.4
name:               t
version:            0.1.0.0
license:            MIT
copyright:          2025 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Application
homepage:           https://github.com/srid/t

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A todo app ...

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base                   >=4   && <5
    , bytestring
    , data-default
    , directory
    , file-embed
    , filepath
    , here
    , htmx
    , htmx-lucid
    , htmx-servant
    , http-api-data
    , http-types
    , lucid2
    , mtl
    , ollama-haskell
    , optics-core
    , profunctors
    , relude                 >=1.0
    , req
    , servant
    , servant-lucid
    , servant-server
    , shower
    , text
    , time
    , wai
    , wai-middleware-static
    , warp
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable t
  import:        shared
  main-is:       Main.hs
  other-modules:
    T.LLM
    T.Types
    T.View
